--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app="classifieds">
   <head>
     <meta charset="utf-8">
-    <title>Reddit Clone</title>
+    <title>Classifieds</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -48,70 +48,21 @@
             </div>
             <div class="form-group">
             <button type="submit" class="btn btn-primary">
-              Create Post
+              Submit
             </button>
             </div>
           </form>
         </div>
       </div>
 
-      <!-- <div class="row">
-        <div class="col-md-12">
-          <div class="well">
-            <div class="media-left">
-              <img class="media-object">
-            </div>
-            <div class="media-body" ng-repeat="comment in $ctrl.comments">
-              <h4 class="media-heading">
-                {{comment.title}}
-                |
-                <a ng-click="comment.votes = comment.votes +1"><i class="glyphicon glyphicon-arrow-up" ></i></a>
-                <a ng-click="comment.votes = comment.votes -1"><i class="glyphicon glyphicon-arrow-down" ></i></a>
-              <div ng-model="$ctrl.comment.votes">
-                {{comment.votes}}
-              </div>
-              </h4>
-              <div class="text-right" ng-model="$ctrl.author">
-                {{comment.author}}
-              </div>
-              <img src='{{comment.image}}'  height="50%">
-              <p>
-                {{comment.body}}
-              </p>
-              <div>
-                Some time ago
-                |
-                <i class="glyphicon glyphicon-comment"></i>
-                <a>
-                  Some comments
-                </a>
-              </div>
-              <div class="row">
-                <div class="col-md-offset-1 col-sm-1">
-                  <hr>
-                  <p>
-                    Comment text
-                  </p>
-                  <form class="form-inline">
-                    <div class="form-group">
-                      <input class="form-control">
-                    </div>
-                    <div class="form-group">
-                      <input type="submit" class="btn btn-primary">
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </main>`
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.js"></script>
+    <script src=“/angular-ui-router/release/angular-ui-router.min.js”></script>
     <script src="./javascripts/app.js"></script>
+    <script src=".javascripts/ads.component.js"></script>
     <script src="./javascripts/ads.service.js"></script>
     <script src="./javascripts/newAdForm.service.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
